--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'Whalers (Persons) -- Juvenile fiction'
 - !lcsh 'Slave trade -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: The Red Eric
 url: http://www.gutenberg.org/ebooks/21714
